--- a/react-frontend/src/index.css
+++ b/react-frontend/src/index.css
@@ -6,4 +6,41 @@
 body {
   font-family: "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell",
     "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+    background: rgb(112,203,255);
+    background: radial-gradient(circle, rgba(137,229,250,1) 0%, rgba(255,255,255,1) 100%);
+}
+
+h1 {
+  
+width: 113px;
+height: 25px;
+left: 139px;
+top: 31px;
+
+font-family: 'Dela Gothic One', sans-serif;
+font-weight: 400;
+font-size: 24px;
+line-height: 34px;
+text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); 
+}
+
+.header {
+    display: flex;
+    justify-content: space-around;
+    flex-direction: row;
+    padding: 20px;
+    margin: auto;
+
+}
+
+button {
+  background: #3B82F6;
+  color: white;
+  font-weight: bold;
+  border-radius: 12px;
+  width: 155.44px;
+  height: 36px;
+  border: 0px solid;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+  
 }
