--- a/react-frontend/src/index.css
+++ b/react-frontend/src/index.css
@@ -8,8 +8,13 @@
 body {
   font-family: "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell",
     "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
-    
-    background: linear-gradient(180deg, rgba(100, 218, 255, 0.9) 0%, rgba(249, 253, 255, 0.12) 77.25%) fixed;
+
+  background: linear-gradient(
+      180deg,
+      rgba(100, 218, 255, 0.9) 0%,
+      rgba(249, 253, 255, 0.12) 77.25%
+    )
+    fixed;
 }
 
 /*Header */
@@ -20,93 +25,88 @@ header {
   flex-direction: row;
   padding: 10px 40px;
   margin: auto;
-
 }
 
 .name {
   display: flex;
   align-items: center;
-  
 }
 
 header h1 {
-  
-font-weight: 400;
-font-size: 24px;
-line-height: 34px;
-text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); 
-text-align: center;
-font-feature-settings: 'pnum' on, 'lnum' on;
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 34px;
+  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  text-align: center;
+  font-feature-settings: "pnum" on, "lnum" on;
 }
 
 .button1 {
   display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    background: #3B82F6;
-    color: white;
-    font-weight: bold;
-    border-radius: 12px;
-    width: 155.44px;
-    height: 36px;
-    border: 0px solid;
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
-    cursor: pointer;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  background: #3b82f6;
+  color: white;
+  font-weight: bold;
+  border-radius: 12px;
+  width: 155.44px;
+  height: 36px;
+  border: 0px solid;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
+    rgba(0, 0, 0, 0.3) 0px 30px 60px -30px,
+    rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+  cursor: pointer;
 }
 
 .button1:hover {
   background-color: #1366d6;
-  box-shadow: rgba(0, 0, 0, .05) 0 5px 30px, rgba(0, 0, 0, .05) 0 1px 4px;
+  box-shadow: rgba(0, 0, 0, 0.05) 0 5px 30px, rgba(0, 0, 0, 0.05) 0 1px 4px;
   opacity: 1;
   transform: translateY(0);
-  transition-duration: .35s;
-  
+  transition-duration: 0.35s;
 }
 
 .button1:hover:after {
-  opacity: .5;
-
+  opacity: 0.5;
 }
 
 .button1:active {
-  box-shadow: rgba(0, 0, 0, .1) 0 3px 6px 0, rgba(0, 0, 0, .1) 0 0 10px 0, rgba(0, 0, 0, .1) 0 1px 4px -1px;
+  box-shadow: rgba(0, 0, 0, 0.1) 0 3px 6px 0, rgba(0, 0, 0, 0.1) 0 0 10px 0,
+    rgba(0, 0, 0, 0.1) 0 1px 4px -1px;
   transform: translateY(2px);
-  transition-duration: .35s;
-
+  transition-duration: 0.35s;
 }
 
 .button1:active:after {
   opacity: 1;
-
 }
 /* Main White Space */
 
 .body {
   position: relative;
-    margin-top: 8px;
-    margin-bottom: 8px;
-    box-sizing: border-box;
-    margin: 0px auto;
-    min-width: 320px;
-    width: 100%;
-    padding: 0px 32px;
-    max-width: 560px;
-    min-height: calc(100vh - 150px);
+  margin-top: 8px;
+  margin-bottom: 8px;
+  box-sizing: border-box;
+  margin: 0px auto;
+  min-width: 320px;
+  width: 100%;
+  padding: 0px 32px;
+  max-width: 560px;
+  min-height: calc(100vh - 150px);
 }
 
 .main {
   font-weight: 400;
-    font-size: 12px;
-    line-height: 1.6em;
-    border-radius: 20px;
-    margin: 70px 0 0 0;
-    padding: 32px;
-    box-shadow: none;
-    background: white;
-    color: grey;
-    text-align: center;
-
+  font-size: 12px;
+  line-height: 1.6em;
+  border-radius: 20px;
+  margin: 70px 0 0 0;
+  padding: 32px;
+  box-shadow: none;
+  background: white;
+  color: grey;
+  text-align: center;
 }
 
 .body h1 {
@@ -118,31 +118,31 @@ font-feature-settings: 'pnum' on, 'lnum' on;
 
 .value {
   position: relative;
-    display: inline-flex;
-    border-width: 1px;
-    border-style: solid;
-    border-image: initial;
-    border-radius: 12px;
-    -webkit-box-align: stretch;
-    align-items: stretch;
-    box-sizing: border-box;
-    padding: 0px 15px;
-    cursor: text;
-    transition: border-color 100ms ease 0s;
-    width: 100%;
-    background: #EEEEEE;
-    border-color: #EEEEEE;
-    color: black;
+  display: inline-flex;
+  border-width: 1px;
+  border-style: solid;
+  border-image: initial;
+  border-radius: 12px;
+  -webkit-box-align: stretch;
+  align-items: stretch;
+  box-sizing: border-box;
+  padding: 0px 15px;
+  cursor: text;
+  transition: border-color 100ms ease 0s;
+  width: 100%;
+  background: #eeeeee;
+  border-color: #eeeeee;
+  color: black;
 }
 
 .amount {
   font-weight: 400;
-    font-size: 14px;
-    display: flex;
-    -webkit-box-flex: 1;
-    flex-grow: 1;
-    position: relative;
-    padding: 17px 0px;
+  font-size: 14px;
+  display: flex;
+  -webkit-box-flex: 1;
+  flex-grow: 1;
+  position: relative;
+  padding: 17px 0px;
 }
 
 .inputAmount {
@@ -166,25 +166,25 @@ font-feature-settings: 'pnum' on, 'lnum' on;
 
 .divAPY {
   display: flex;
-    margin: 16px 0px;
-    font-weight: 400;
-    font-size: 12px;
-    line-height: 1.6em;
-    position: relative;
+  margin: 16px 0px;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.6em;
+  position: relative;
 
-    border-width: 1px;
-    border-style: solid;
-    border-image: initial;
-    border-radius: 12px;
-    -webkit-box-align: stretch;
-    align-items: stretch;
-    box-sizing: border-box;
-    padding: 0px 15px;
-    cursor: text;
-    transition: border-color 100ms ease 0s;
-    width: 100%;
-    background: #EEEEEE;
-    border-color: #EEEEEE;
+  border-width: 1px;
+  border-style: solid;
+  border-image: initial;
+  border-radius: 12px;
+  -webkit-box-align: stretch;
+  align-items: stretch;
+  box-sizing: border-box;
+  padding: 0px 15px;
+  cursor: text;
+  transition: border-color 100ms ease 0s;
+  width: 100%;
+  background: #eeeeee;
+  border-color: #eeeeee;
 }
 
 .textAPY {
@@ -249,7 +249,6 @@ font-feature-settings: 'pnum' on, 'lnum' on;
   font-size: 12px;
   line-height: 1.6em;
   margin-top: 45px;
-  
 }
 
 .selectAsset {
@@ -268,45 +267,41 @@ font-feature-settings: 'pnum' on, 'lnum' on;
   align-items: center;
   flex-shrink: 1;
   overflow: hidden;
-
 }
 
 .chainId {
   border-radius: 15px;
   border: none;
-    display: inline-flex;
-    -webkit-box-align: center;
-    align-items: center;
-    background: #f2f4f6;
-    color: #7a8aa0;
-    max-width: 100%;
-    box-sizing: border-box;
-    overflow: hidden;
-    margin-right: 10px;
-    cursor: pointer;
-    font-size: 14px;
-    padding: 4px 6px;
-
+  display: inline-flex;
+  -webkit-box-align: center;
+  align-items: center;
+  background: #f2f4f6;
+  color: #7a8aa0;
+  max-width: 100%;
+  box-sizing: border-box;
+  overflow: hidden;
+  margin-right: 10px;
+  cursor: pointer;
+  font-size: 14px;
+  padding: 4px 6px;
 }
 
 #addressButton {
   border-radius: 15px;
   border: none;
-    display: inline-flex;
-    -webkit-box-align: center;
-    align-items: center;
-    background: #f2f4f6;
-    color: #7a8aa0;
-    max-width: 100%;
-    box-sizing: border-box;
-    overflow: hidden;
-    margin-right: 10px;
-    cursor: pointer;
-    font-size: 14px;
-    padding: 4px 6px;
-  
+  display: inline-flex;
+  -webkit-box-align: center;
+  align-items: center;
+  background: #f2f4f6;
+  color: #7a8aa0;
+  max-width: 100%;
+  box-sizing: border-box;
+  overflow: hidden;
+  margin-right: 10px;
+  cursor: pointer;
+  font-size: 14px;
+  padding: 4px 6px;
 }
-
 
 .address {
   flex-shrink: 1;
@@ -316,26 +311,22 @@ font-feature-settings: 'pnum' on, 'lnum' on;
   width: 100px;
   position: relative;
   font-weight: 400;
-  
-  
 }
 
 /*Balance row */
 
 .balance {
   display: flex;
-    margin: 16px 0px;
-    font-weight: 400;
-    font-size: 12px;
-    line-height: 1.6em;
+  margin: 16px 0px;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.6em;
 }
-
 
 /*Approve button */
 
 .approveButton {
   margin-bottom: 8px;
-
 }
 
 .approve {
@@ -361,10 +352,9 @@ font-feature-settings: 'pnum' on, 'lnum' on;
   padding: 14px;
   min-width: 120px;
   color: #fff;
-  background-color: #3B82F6;
+  background-color: #3b82f6;
   transition: background-color 100ms ease 0s;
   cursor: pointer;
-
 }
 
 /* Approve Bridge section */
@@ -397,11 +387,10 @@ font-feature-settings: 'pnum' on, 'lnum' on;
   padding: 14px;
   min-width: 120px;
   color: #fff;
-  background-color: #2A9EDE;
+  background-color: #2a9ede;
   transition: background-color 100ms ease 0s;
   cursor: pointer;
   margin-top: 16px;
-
 }
 
 /*Bridge transaction */
@@ -429,18 +418,16 @@ font-feature-settings: 'pnum' on, 'lnum' on;
   padding: 14px;
   min-width: 120px;
   color: #fff;
-  background-color: #2A9EDE;
+  background-color: #2a9ede;
   transition: background-color 100ms ease 0s;
   cursor: pointer;
   margin-top: 16px;
-
 }
 
 /* Withdraw button */
 
 .withdrawButton {
-  margin:8px 0;
-
+  margin: 8px 0;
 }
 
 .withdraw {
@@ -466,16 +453,12 @@ font-feature-settings: 'pnum' on, 'lnum' on;
   padding: 14px;
   min-width: 120px;
   color: #fff;
-  background-color: #85B1F7;
+  background-color: #85b1f7;
   transition: background-color 100ms ease 0s;
   cursor: pointer;
-  
-
 }
 
 /* Deposit Button */
-
-
 
 .deposit {
   box-sizing: border-box;
@@ -500,8 +483,7 @@ font-feature-settings: 'pnum' on, 'lnum' on;
   padding: 14px;
   min-width: 120px;
   color: #fff;
-  background-color: #3B82F6;
+  background-color: #3b82f6;
   transition: background-color 100ms ease 0s;
   cursor: pointer;
-
 }
