--- a/react-frontend/src/index.css
+++ b/react-frontend/src/index.css
@@ -22,9 +22,16 @@ body {
 header {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   flex-direction: row;
   padding: 10px 40px;
   margin: auto;
+}
+
+.leftHeader {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
 }
 
 .name {
@@ -33,8 +40,9 @@ header {
 }
 
 header h1 {
-  font-weight: 400;
+  font-weight: bold;
   font-size: 24px;
+  margin-left: 4px;
   line-height: 34px;
   text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   text-align: center;
@@ -103,7 +111,9 @@ header h1 {
   border-radius: 20px;
   margin: 70px 0 0 0;
   padding: 32px;
-  box-shadow: none;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
+  rgba(0, 0, 0, 0.3) 0px 30px 60px -30px,
+  rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
   background: white;
   color: grey;
   text-align: center;
@@ -230,14 +240,39 @@ header h1 {
   width: 100%;
   line-height: 1em;
   font-size: 14px;
-  border-radius: 10px;
+  border-radius: 12px;
   padding: 20px;
   min-width: 120px;
   color: #fff;
-  background-color: black;
+  background-color: #3b82f6;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
+    rgba(0, 0, 0, 0.3) 0px 30px 60px -30px,
+    rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
   transition: background-color 100ms ease 0s;
-
   cursor: pointer;
+}
+
+.button2:hover {
+  background-color: #1366d6;
+  box-shadow: rgba(0, 0, 0, 0.05) 0 5px 30px, rgba(0, 0, 0, 0.05) 0 1px 4px;
+  opacity: 1;
+  transform: translateY(0);
+  transition-duration: 0.35s;
+}
+
+.button2:hover:after {
+  opacity: 0.5;
+}
+
+.button2:active {
+  box-shadow: rgba(0, 0, 0, 0.1) 0 3px 6px 0, rgba(0, 0, 0, 0.1) 0 0 10px 0,
+    rgba(0, 0, 0, 0.1) 0 1px 4px -1px;
+  transform: translateY(2px);
+  transition-duration: 0.35s;
+}
+
+.button2:active:after {
+  opacity: 1;
 }
 
 /*Select Assets row */
@@ -246,7 +281,7 @@ header h1 {
   display: flex;
   margin: 16px 0px;
   font-weight: 400;
-  font-size: 12px;
+  font-size: 14px;
   line-height: 1.6em;
   margin-top: 45px;
 }
@@ -263,7 +298,6 @@ header h1 {
 
 .divaddress {
   display: flex;
-  -webkit-box-align: center;
   align-items: center;
   flex-shrink: 1;
   overflow: hidden;
@@ -272,34 +306,38 @@ header h1 {
 .chainId {
   border-radius: 15px;
   border: none;
-  display: inline-flex;
-  -webkit-box-align: center;
+  display: flex;
   align-items: center;
   background: #f2f4f6;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
+  rgba(0, 0, 0, 0.3) 0px 30px 60px -30px,
+  rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
   color: #7a8aa0;
   max-width: 100%;
   box-sizing: border-box;
   overflow: hidden;
   margin-right: 10px;
   cursor: pointer;
-  font-size: 14px;
+  font-size: 16px;
+  font-weight: bold;
   padding: 4px 6px;
 }
 
 #addressButton {
   border-radius: 15px;
   border: none;
-  display: inline-flex;
-  -webkit-box-align: center;
+  display: flex;
   align-items: center;
   background: #f2f4f6;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
+  rgba(0, 0, 0, 0.3) 0px 30px 60px -30px,
+  rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
   color: #7a8aa0;
   max-width: 100%;
   box-sizing: border-box;
   overflow: hidden;
   margin-right: 10px;
   cursor: pointer;
-  font-size: 14px;
   padding: 4px 6px;
 }
 
@@ -307,10 +345,10 @@ header h1 {
   flex-shrink: 1;
   overflow: hidden;
   text-overflow: ellipsis;
-  font-size: 14px;
+  font-size: 16px;
   width: 100px;
   position: relative;
-  font-weight: 400;
+  font-weight: bold;
 }
 
 /*Balance row */
@@ -319,7 +357,7 @@ header h1 {
   display: flex;
   margin: 16px 0px;
   font-weight: 400;
-  font-size: 12px;
+  font-size: 14px;
   line-height: 1.6em;
 }
 
@@ -355,6 +393,29 @@ header h1 {
   background-color: #3b82f6;
   transition: background-color 100ms ease 0s;
   cursor: pointer;
+}
+
+.approve:hover {
+  background-color: #1366d6;
+  box-shadow: rgba(0, 0, 0, 0.05) 0 5px 30px, rgba(0, 0, 0, 0.05) 0 1px 4px;
+  opacity: 1;
+  transform: translateY(0);
+  transition-duration: 0.35s;
+}
+
+.approve:hover:after {
+  opacity: 0.5;
+}
+
+.approve:active {
+  box-shadow: rgba(0, 0, 0, 0.1) 0 3px 6px 0, rgba(0, 0, 0, 0.1) 0 0 10px 0,
+    rgba(0, 0, 0, 0.1) 0 1px 4px -1px;
+  transform: translateY(2px);
+  transition-duration: 0.35s;
+}
+
+.approve:active:after {
+  opacity: 1;
 }
 
 /* Approve Bridge section */
@@ -393,6 +454,29 @@ header h1 {
   margin-top: 16px;
 }
 
+.approveBridge:hover {
+  background-color: #2787bc;
+  box-shadow: rgba(0, 0, 0, 0.05) 0 5px 30px, rgba(0, 0, 0, 0.05) 0 1px 4px;
+  opacity: 1;
+  transform: translateY(0);
+  transition-duration: 0.35s;
+}
+
+.approveBridge:hover:after {
+  opacity: 0.5;
+}
+
+.approveBridge:active {
+  box-shadow: rgba(0, 0, 0, 0.1) 0 3px 6px 0, rgba(0, 0, 0, 0.1) 0 0 10px 0,
+    rgba(0, 0, 0, 0.1) 0 1px 4px -1px;
+  transform: translateY(2px);
+  transition-duration: 0.35s;
+}
+
+.approveBridge:active:after {
+  opacity: 1;
+}
+
 /*Bridge transaction */
 
 .bridgeTrans {
@@ -422,6 +506,29 @@ header h1 {
   transition: background-color 100ms ease 0s;
   cursor: pointer;
   margin-top: 16px;
+}
+
+.bridgeTrans:hover {
+  background-color: #2787bc;
+  box-shadow: rgba(0, 0, 0, 0.05) 0 5px 30px, rgba(0, 0, 0, 0.05) 0 1px 4px;
+  opacity: 1;
+  transform: translateY(0);
+  transition-duration: 0.35s;
+}
+
+.bridgeTrans:hover:after {
+  opacity: 0.5;
+}
+
+.bridgeTrans:active {
+  box-shadow: rgba(0, 0, 0, 0.1) 0 3px 6px 0, rgba(0, 0, 0, 0.1) 0 0 10px 0,
+    rgba(0, 0, 0, 0.1) 0 1px 4px -1px;
+  transform: translateY(2px);
+  transition-duration: 0.35s;
+}
+
+.bridgeTrans:active:after {
+  opacity: 1;
 }
 
 /* Withdraw button */
@@ -487,3 +594,30 @@ header h1 {
   transition: background-color 100ms ease 0s;
   cursor: pointer;
 }
+
+.deposit:hover {
+  background-color: #1366d6;
+  box-shadow: rgba(0, 0, 0, 0.05) 0 5px 30px, rgba(0, 0, 0, 0.05) 0 1px 4px;
+  opacity: 1;
+  transform: translateY(0);
+  transition-duration: 0.35s;
+}
+
+.deposit:hover:after {
+  opacity: 0.5;
+}
+
+.deposit:active {
+  box-shadow: rgba(0, 0, 0, 0.1) 0 3px 6px 0, rgba(0, 0, 0, 0.1) 0 0 10px 0,
+    rgba(0, 0, 0, 0.1) 0 1px 4px -1px;
+  transform: translateY(2px);
+  transition-duration: 0.35s;
+}
+
+.deposit:active:after {
+  opacity: 1;
+}
+
+
+/* Success button */
+
